# conflux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  cholesky-factorization-16k.txt  cholesky-factorization-32k.txt  cholesky-factorization-65k.txt  cholesky-factorization-mkl-16k.txt  cholesky-factorization-mkl-32k.txt  cholesky-factorization-mkl-65k.txt  cholesky-matrix-gen-log.txt  cholesky-matrix-run-32-psychol.txt  cholesky-matrix-run-64-psychol.txt  cholesky-matrix-run-8-psychol  conflux_opt.cpp
benchmarks/: benchmarks.csv  lu_heatmap_l_f_c.pptx  ~$lu_heatmap_l_f_c.pptx
benchmarks/scripts/: SPCL_Stats.R  check_correctness.R  commvol_models.R  fixed_N.R  fixed_P.R  heatmap.R  heatmap_commvol.R  heatmap_old.R  parse_comm_vol.R  parse_comm_vol_daint.R  parse_generic.R  parse_mainpaper.R  parse_mainpaper_time.R  plotBreakdown.R  plot_settings.R  poster_figure.R  res.csv  scaling_plots.R  setups.csv  summary_table.R  violin_plots.R  weak_scaling.R
cmake/: FindMKL.cmake  FindOpenBLAS.cmake  conflux.pc.in  confluxConfig.cmake.in
conflux/: conflux.cpp  conflux_opt.cpp
data/benchmarks/cholesky25d/output/csv/: benchmark_16384_1024_4x4x2.csv  benchmark_16384_1024_4x4x4.csv  benchmark_16384_1024_8x8x1.csv  benchmark_16384_2048_4x4x2.csv  benchmark_16384_2048_4x4x4.csv  benchmark_16384_2048_8x8x1.csv  benchmark_16384_256_4x4x2.csv  benchmark_16384_256_4x4x4.csv  benchmark_16384_256_8x8x1.csv  benchmark_16384_512_3x3x4.csv  benchmark_16384_512_4x4x2.csv  benchmark_16384_512_4x4x4.csv  benchmark_16384_512_8x8x1.csv  benchmark_32768_1024_4x4x2.csv  benchmark_32768_1024_4x4x4.csv  benchmark_32768_1024_8x8x1.csv  benchmark_32768_2048_4x4x2.csv  benchmark_32768_2048_4x4x4.csv  benchmark_32768_2048_8x8x1.csv  benchmark_32768_256_4x4x2.csv  benchmark_32768_256_4x4x4.csv  benchmark_32768_256_8x8x1.csv  benchmark_32768_512_4x4x2.csv  benchmark_32768_512_4x4x4.csv  benchmark_32768_512_8x8x1.csv  benchmark_49152_1024_4x4x2.csv  benchmark_49152_1024_4x4x4.csv  benchmark_49152_1024_8x8x1.csv  benchmark_49152_2048_4x4x2.csv  benchmark_49152_2048_4x4x4.csv  benchmark_49152_2048_8x8x1.csv  benchmark_49152_256_4x4x2.csv  benchmark_49152_256_4x4x4.csv  benchmark_49152_256_8x8x1.csv  benchmark_49152_512_4x4x2.csv  benchmark_49152_512_4x4x4.csv  benchmark_49152_512_8x8x1.csv  benchmark_65536_1024_4x4x2.csv  benchmark_65536_1024_4x4x4.csv  benchmark_65536_1024_8x8x1.csv  (+59 more)
data/benchmarks/scalapack/output/csv/: benchmark_16384_512_6x6x0.csv  benchmark_32768_512_8x8x0.csv  benchmark_65536_512_8x8x0.csv
examples/: CMakeLists.txt  cholesky_helper.cpp  cholesky_miniapp.cpp  cholesky_scalapack.cpp  conflux_miniapp.cpp  utils.hpp
launch/: chol-fact-mkl.sh  chol-fact25d.sh  launch_weak_confchox_1024.sh  launch_weak_confchox_128.sh  launch_weak_confchox_16.sh  launch_weak_confchox_256.sh  launch_weak_confchox_32.sh  launch_weak_confchox_4.sh  launch_weak_confchox_512.sh  launch_weak_confchox_64.sh  launch_weak_confchox_8.sh  launch_weak_conflux_1024.sh  launch_weak_conflux_128.sh  launch_weak_conflux_16.sh  launch_weak_conflux_256.sh  launch_weak_conflux_32.sh  launch_weak_conflux_4.sh  launch_weak_conflux_512.sh  launch_weak_conflux_64.sh  launch_weak_conflux_8.sh
python/: analyze_output.py  compare_res.py  conflux.py  lu_distr_pivot_notile.py  pivoting.py  reference_lu.py  settings.py  utils.py
scripts/: README.md  benchmark_check.py  benchmark_helper.py  generate_csv.py  generate_launch_files.py  generate_launch_files_strong.py  generate_launch_files_weak.py  launch_on_daint.py  params.ini  params_strong.ini  params_weak.ini
src/conflux/: CMakeLists.txt  blas.cpp  conflux_opt.cpp  conflux_opt.hpp  matrix.hpp  matrix_view.hpp  utils.hpp
src/conflux/cholesky/: CMakeLists.txt  Cholesky.cpp  Cholesky.h  CholeskyIO.cpp  CholeskyIO.h  CholeskyProfiler.h  CholeskyProperties.cpp  CholeskyProperties.h  CholeskyTypes.h  Makefile  Processor.cpp  Processor.h  TileMatrix.cpp  TileMatrix.h  config  main.cpp
src/conflux/cholesky/benchmark/: Benchmark.cpp  Benchmark.h
src/conflux/cholesky/scripts/: CholeskyHelper.cpp  benchmark_helper.py  cholesky_helper.py
src/conflux/lu/: CMakeLists.txt  blas.cpp  conflux_opt.cpp  conflux_opt.hpp  layout.cpp  layout.hpp  lu_params.hpp  matrix_view.hpp  memory_utils.hpp  profiler.hpp  utils.hpp
tests/: CMakeLists.txt  gtest-all.cpp
tests/unit/: CMakeLists.txt  test_mappers.cpp  test_utils.cpp
